--- a/favfood.html
+++ b/favfood.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <ol>
-      <li>kitifo</li>
+      <li>kitifo 0101</li>
       <li>shekla tibse</li>
       <li>minchet</li>
       <li>burger</li>
