--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
     <li><a href="https://www.youtube.com/watch?v=dCue9s4t-oc">video games</a></li>
     <li><a href="https://www.youtube.com/results?search_query=web+development">coding</a></li>
     <li><a href="https://www.youtube.com/watch?v=O-9074pygXo">catia v5</a></li>
+     <li><a href="chess board.html">catia v5</a></li>
+    
   </ol>
   <hr>
   <ul>
