--- a/index.html
+++ b/index.html
@@ -11,96 +11,21 @@
     <tr>
       <td><img src="images.jpg" alt=" the e image" /></td>
       <td>
-        <h1>Test 101</h1>
-        <p><em>Freelancer at <strong>upwork.com</strong></em></p>
+        <h1>iphone 4s old version user</h1>
+        <p><em>inspired by the new  <strong>iphone 13pro</strong></em></p>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br>
-          Interdum consectetur libero id faucibus nisl tincidunt eget nullam non. <br>
-          Viverra vitae congue eu consequat ac felis. Diam vel quam elementum pulvinar etiam.<br>
-          In iaculis nunc sed augue lacus viverra vitae congue.<br>
-          Praesent elementum facilisis leo vel. Non consectetur a erat nam at lectus.
+          I am Ethiopian based iphone user. used iphone 4s for over 12 year and know it changed to fossil.<br/>
+          I will be happy if I get iphone 13 even similar modern version to see what iphone's progress.
+          
         </p>
       </td>
     </tr>
   </table>
 
   <hr>
-  <h3>Books and Teaching</h3>
-    <ul>
-    <li>Html and css</li>
-    <li>javascript</li>
-    <li>bootstrap</li>
-    <li>react.js</li>
-    <li>php</li>
-    <li>SQL</li>
+  
 
-    </ul>
-  <hr>
-  <h3>skills and hobbies</h3>
-  <ol>
-    <li><a href="https://www.youtube.com/watch?v=1Dv63K05MzQ">Basketball</a></li>
-    <li><a href="https://www.youtube.com/watch?v=dCue9s4t-oc">video games</a></li>
-    <li><a href="https://www.youtube.com/results?search_query=web+development">coding</a></li>
-    <li><a href="https://www.youtube.com/watch?v=O-9074pygXo">catia v5</a></li>
-     <li><a href="chess-board.html">chess playing</a></li>
-    
-  </ol>
-  <hr>
-  <ul>
-    <li><h3><a href="mycontacts.html">my contact</a></h3></li>
-    <li><h3><a href="favfood.html">food that I like</a></h3></li>
-    <li><h3><a href="ongoingpr.html">Ongoing projects</a></h3></li>
-  </ul>
-  <hr>
-  <h3>Memorable Days</h3>
-  <table  cellspacing ="10px">
-    <thead>
-      <tr>
-        <th><u>Date</u></th>
-        <th><u>Event</u></th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>2005/2013</td>
-        <td>Graduated from elementary school</td>
-      </tr>
-      <tr>
-        <td>2007/2015</td>
-        <td>Graduated from highschool</td>
-      </tr>
-      <tr>
-        <td>2009/2017</td>
-        <td>Graduated from preparatory school</td>
-      </tr>
-
-    </tbody>
-    <tfoot>
-      <tr>
-        <td>sign</td>
-        <td>sealed</td>
-      </tr>
-
-
-    </tfoot>
-  </table>
-  <hr>
-  <h3>Skills</h3>
-
-  <table cellspacing ="10px">
-      <tr><!--tr 1-->
-          <td>html</td>
-          <td>⭐⭐⭐⭐⭐</td>
-      </tr>
-      <tr>
-        <td>javascript</td>
-        <td>⭐⭐⭐⭐⭐</td>
-      </tr>
-      <tr><!--tr 2-->
-          <td>CSS</td>
-          <td>⭐⭐⭐⭐⭐</td>
-      </tr>
-  </table>
+ 
 
 </body>
 
