--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
       </td>
     </tr>
   </table>
-<img src="images2.jpg" alt=" the e image" />
-  <img src="images3.jpg" alt=" the e image" />
-  <img src="images4.jpg" alt=" the e image" />
-   <img src="images5.jpg" alt=" the e image" />
+<img src="image2.JPG" alt=" the e image" />
+  <img src="image3.JPG" alt=" the e image" />
+  <img src="image4.JPG" alt=" the e image" />
+   <img src="image5.JPG" alt=" the e image" />
   <p>I want this to be changed to this with the kindness of apple company.</p>
-  <img src="images2.jpg" alt=" the e image" />
+  <img src="images1.jpg" alt=" the e image" />
   <h1 style="font-size: 90px;">Please if any one see this transfer to whom it corned.</h1>
   <hr>
 
